# wiringX

./: CMakeLists.txt
.github/workflows/: main.yml
.history/src/soc/rockchip/: rk356x_20230303172233.c  rk356x_20230303173020.c  rk356x_20230303173050.c
python/: CMakeLists.txt  setup.py
python/res/deb/: prerm
python/wiringX/: wiringx.c
src/: wiringx.c
src/platform/milkv/: duo.c
src/platform/radxa/: radxa_cm3_io.c  radxa_cm3_io.h  radxa_e23.c  radxa_e23.h  radxa_e25.c  radxa_e25.h  radxa_zero2.c  radxa_zero2.h  rock3_cm3_io.c  rock3_cm3_io.h  rock3a_v1_2.c  rock3a_v1_2.h  rock3a_v1_3.c  rock3a_v1_3.h  rock3b.c  rock3b.h  rock3c.c  rock3c.h  rock5a_v1_1.c  rock5a_v1_1.h  rock5a_v1_2.c  rock5a_v1_2.h  rock5b.c  rock5b.h
src/soc/amlogic/: a311d.c  a311d.h
src/soc/rockchip/: rk3399.c  rk356x.c  rk356x.h  rk3588.c  rk3588.h
src/soc/sophgo/: cv180.c
